# rd-territorial-system

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  pyproject.toml  repo_inventory.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: cache.py  main.py  models.py
api/routes/: batch.py  explain.py  meta.py  resolve.py
api/services/: resolver.py
artifacts/reports/metrics/: metrics.csv
clients/js/: client.js
clients/python/: client.py
data/: api_keys.json
data/catalog/: registry.json
data/catalog/aliases/: barrios.yml  municipalities.yml  provinces.yml  subbarrios.yml  toponyms.yml
data/catalog/config/: provinces_manifest.json
data/catalog/current/: rd_territorial_master.csv  rd_territorial_master.parquet  rd_territorial_master_candidate.csv
data/processed/: coverage_report.csv  ingestion_report.json  match_report.csv  provinces.geojson  unmatched_municipalities.csv
data/raw/one/: one_division_territorial.template.csv
data/reconciliation/: README.md  municipality_overrides.csv
data_pipeline/processed/: ingestion_report.json  municipalities.geojson
data_pipeline/raw/azua/: azua_completo.txt
data_pipeline/raw/baoruco/: baoruco_completo.txt
data_pipeline/raw/barahona/: barahona_completo.txt
data_pipeline/raw/dajabon/: dajabon_completo.txt
data_pipeline/raw/dn/: dn_completo.txt
data_pipeline/raw/duarte/: duarte_completo.txt
data_pipeline/raw/eliaspina/: elias_pina_completo.txt
data_pipeline/raw/elseibo/: el_seibo_completo.txt
data_pipeline/raw/espaillat/: espaillat_completo.txt
data_pipeline/raw/hatomayor/: hato_mayor_completo.txt
data_pipeline/raw/hermanasmirabal/: hermanas_mirabal_completo.txt
data_pipeline/raw/independencia/: independencia_completo.txt
data_pipeline/raw/laaltagracia/: la_altagracia_completo.txt
data_pipeline/raw/laromana/: la_romana_completo.txt
data_pipeline/raw/lavega/: la_vega_completo.txt
data_pipeline/raw/mariatrinidadsanchez/: maria_trinidad_sanchez_completo.txt
data_pipeline/raw/monsenornouel/: monsenor_nouel_completo.txt
data_pipeline/raw/montecristi/: monte_cristi_completo.txt
data_pipeline/raw/monteplata/: monte_plata_completo.txt
data_pipeline/raw/pedernales/: pedernales_completo.txt
data_pipeline/raw/peravia/: peravia_completo.txt
data_pipeline/raw/puertoplata/: puerto_plata_completo.txt
data_pipeline/raw/samana/: samana_completo.txt
data_pipeline/raw/sanchezramirez/: sanchez_ramirez_completo.txt
data_pipeline/raw/sancristobal/: san_cristobal_completo.txt
data_pipeline/raw/sanjosedeocoa/: san_jose_de_ocoa_completo.txt
data_pipeline/raw/sanjuan/: san_juan_completo.txt
data_pipeline/raw/sanpedrodemacoris/: san_pedro_de_macoris_completo.txt
docs/: api_v1.md  excel_multisheet_v1_0.md  municipality_overrides.md  v2_0_real_data_workflow.md
docs/whitepaper/: rd_territorial_engine_whitepaper.md
examples/clients/js/: client.js
metadata/: catalog_metadata.json  schema.json
notebooks/: metrics_analysis_paper_ready.ipynb
ops/: analyze_ambiguity.py  check_candidate.py  check_expected_provinces.py  evaluate_resolver.py  ingest_and_promote.py
postman/: collection.json
reports/: ambiguity_top20.csv
rules/: registry.json  v1.yml
scripts/: build_master_catalog.py  build_v1_0.py  build_v2_0.py  export_metrics_csv.py  fetch_gadm.py  profile_one_source.py
scripts/ops/: analyze_ambiguity.py  evaluate_resolver.py  ingest_and_promote.py
src/ingestion/: azua_ingestion.py  territorial_txt.py
src/rd_territorial_system/: __init__.py  builder.py  catalog.py  config.py  geometry.py  ingestion.py  normalization.py  reconciliation.py  reporting.py  services.py  sources.py  types_api.py
tests/: test_api.py  test_api_client_tracking.py  test_api_contract.py  test_api_dn.py  test_api_key_store.py  test_api_protection.py  test_api_scopes.py  test_api_security.py  test_azua_append_integration.py  test_azua_parser.py  test_azua_pipeline.py  test_build_master_catalog.py  test_build_master_catalog_cli.py  test_build_v1_0.py  test_builder_outputs.py  test_catalog_azua.py  test_catalog_contract.py  test_catalog_dn.py  test_catalog_integrity.py  test_catalog_national_consistency.py  test_catalog_national_rules.py  test_catalog_runtime_debug.py  test_catalog_snapshot.py  test_geometry.py  test_ingestion.py  test_ingestion_multisheet.py  test_ingestion_report.py  test_metrics_exporter.py  test_normalization.py  test_public_api.py  test_rate_limit_backends.py  test_reconciliation.py  test_resolver_national.py  test_resolver_regression.py  test_security_unit.py  test_services.py  test_services_v2.py  test_validation.py
tests/fixtures/: azua_sample.txt
(+35 files in other folders)
