[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd-territorial-system"
version = "2.0.0"
description = "Sistema territorial y geoespacial reutilizable para República Dominicana"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Edwin José Nolasco"}]
dependencies = [
  "openpyxl>=3.1",
  "pandas>=2.0",
  "requests>=2.31",
  "shapely>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
